# CnC_Red_Alert

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  README.md  launch.sh  launcha.sh  launche.sh
.github/agents/: Explore.agent.md
CODE/: 2KEYFRAM.CPP  AADATA.CPP  ABSTRACT.CPP  ABSTRACT.H  ADATA.CPP  ADPCM.CPP  AIRCRAFT.CPP  AIRCRAFT.H  ANIM.CPP  ANIM.H  AUDIO.CPP  AUDIO.H  B64PIPE.CPP  B64PIPE.H  B64STRAW.CPP  B64STRAW.H  BAR.CPP  BAR.H  BASE.CPP  BASE.H  BASE64.CPP  BBDATA.CPP  BDATA.CPP  BENCH.CPP  BENCH.H  BFIOFILE.CPP  BFIOFILE.H  BIGCHECK.CPP  BIGCHECK.H  BLOWFISH.CPP  BLOWFISH.H  BLOWPIPE.CPP  BLOWPIPE.H  BLWSTRAW.CPP  BLWSTRAW.H  BMP8.CPP  BMP8.H  BUFF.CPP  BUFF.H  BUFFERX.H  (+474 more)
CODE/ENG/: CONQUER.TXT
CODE/WOLAPI/: WOLAPI.H
IPX/: FIXTHUNK.CPP  IPXTEST.CPP  THIPX16C.CPP  THIPX32C.CPP
IPX/OK/: IPX16C.CPP  IPXTEST.CPP  THIPX16C.CPP  THIPX32C.CPP
LAUNCHER/: 256BMP.C  FILED.H  FINDPATCH.CPP  FINDPATCH.H  MAIN.CPP  MONOD.H  PATCH.CPP  PROCESS.CPP  PROCESS.H  STREAMER.CPP  WINBLOWS.CPP  WINBLOWS.H
LAUNCHER/UTIL/: STREAMER.CPP
SDL3_COMPAT/wrappers/: WINDOWS.H  bios.h  commlib.h  conio.h  ddeml.h  ddeml_compat.cpp  ddraw.h  ddraw_compat.cpp  direct.h  dos.h  dos_compat.cpp  dsound.h  dsound_compat.cpp  fast.h  io.h  mem.h  mmsystem.h  modem.h  new.h  objbase.h  process.h  profile_compat.cpp  ra_messagebox.h  sdl_config.cpp  sdl_config.h  sdl_draw.cpp  sdl_draw.h  sdl_fs.cpp  sdl_fs.h  share.h  win32_compat.cpp  win32_compat.h  windows.h  windowsx.h  winsock.h
TOOLS/: emscripten_range_server.py
TOOLS/AUDIOMAK/: AUDIOMAK.CPP
TOOLS/MIX/: MIXFILE.CPP
VQ/INCLUDE/: VQ.H
VQ/VQA32/: AUDIO.CPP  AUDIOCOMPAT.CPP  AUDUNZAPCOMPAT.CPP  CAPTION.CPP  CAPTION.H  CONFIG.CPP  DRAWER.BAK  DRAWER.CPP  DSTREAM.CPP  LOADER.BAK  LOADER.CPP  SOS.H  SOSDATA.H  SOSFNCT.H  TASK.CPP  UNVQ.H  UNVQCOMPAT.CPP  VQAFILE.H  VQAPLAY.H  VQAPLAYP.H  VQCOMPAT.CPP
VQ/VQM32/: CAPTOKEN.CPP  FONT.CPP  HUFFCMP.CPP  IFF.CPP  MIXFILE.CPP  MIXFILE.H  PROFILE.CPP  TESTVB.CPP  VESABLIT.CPP
WIN32LIB/AUDIO/: AUDCOMPAT.CPP  AUDIO.H  FUNCTION.H  OLSOSDEC.ASM  SDLAUDIOBACKEND.CPP  SOS.H  SOSCODEC.ASM  SOSCOMP.H  SOSDATA.H  SOSDEFS.H  SOSFNCT.H  SOUND.H  SOUNDINT.CPP  SOUNDINT.H  SOUNDIO.CPP  SOUNDLCK.CPP  TEST.CPP
WIN32LIB/DIPTHONG/: DIPTHONG.CPP  DIPTHONG.H  _DIPTABL.CPP
WIN32LIB/DRAWBUFF/: BUFFER.CPP  BUFFER.H  BUFFGLBL.CPP  DRAWBUFF.H  DRAWRECT.CPP  GBUFFER.CPP  GBUFFER.H  ICONCACH.CPP  ICONCACH.H  REGIONSZ.CPP  SOFTDRAW.CPP
WIN32LIB/FONT/: FONT.CPP  FONT.H  LOADFONT.CPP  SET_FONT.CPP
WIN32LIB/IFF/: FILEPCX.H  IFF.CPP  LOAD.CPP  LOADPCX.CPP  LOADPICT.CPP  WRITELBM.CPP  WRITEPCX.CPP
WIN32LIB/INCLUDE/: AUDIO.H  BUFFER.H  DESCMGMT.H  DRAWBUFF.H  FILE.H  FILEPCX.H  FILETEMP.H  FONT.H  FUNCTION.H  GBUFFER.H  ICONCACH.H  IFF.H  KEYBOARD.H  MEMFLAG.H  MISC.H  MODEMREG.H  MONO.H  MOUSE.H  PALETTE.H  PROFILE.H  RAWFILE.H  SDLAUDIOBACKEND.H  SHAPE.H  SOS.H  SOSCOMP.H  SOSDATA.H  SOSFNCT.H  SOUND.H  SOUNDINT.H  TIMER.H  VIDEO.H  WINCOMM.H  WWFILE.H  WWLIB32.H  WWMEM.H  WWSTD.H  WW_WIN.H
WIN32LIB/KEYBOARD/: KEYBOARD.CPP  KEYBOARD.H  MOUSE.CPP  MOUSE.H  MOUSESOFT.CPP
WIN32LIB/MEM/: ALLOC.CPP  MEM.CPP  MEMFLAG.H  MEM_COPY.ASM  NEWDEL.CPP  WWMEM.H
WIN32LIB/MISC/: DDRAW.CPP  DELAY.CPP  EXIT.CPP  FINDARGV.CPP  IRANDOM.CPP  LEGACYCOMPAT.CPP  LIB.CPP  MISC.H  VERSION.CPP  WWLIB32.H  WWSTD.H
WIN32LIB/MONO/: MONO.CPP  MONO.H
WIN32LIB/PALETTE/: LOADPAL.CPP  MORPHPAL.CPP  PALETTE.CPP  PALETTE.H
WIN32LIB/PLAYCD/: GETCD.CPP  PLAYCD.H  REDBOOK.CPP
WIN32LIB/PROFILE/: PROFILE.CPP
WIN32LIB/RAWFILE/: CCFILE.CPP  FILE.H  RAWFILE.CPP  RAWFILE.H
WIN32LIB/SHAPE/: GETSHAPE.CPP  PRIOINIT.CPP  SHAPE.H
WIN32LIB/SRCDEBUG/: CCFILE.CPP  DDRAW.CPP  DELAY.CPP  FILE.CPP  FILECHNG.CPP  FILEIO.CPP  FINDARGV.CPP  FINDFILE.CPP  FONT.CPP  GETCD.CPP  ICONCACH.CPP  ICONSET.CPP  LOAD.CPP  LOADFONT.CPP  LOADPCX.CPP  LOADPICT.CPP  MEM.CPP  MONO.CPP  PALETTE.CPP  RAWFILE.CPP  SOUNDINT.CPP  SOUNDIO.CPP  SOUNDLCK.CPP  TST.CPP  WINCOMM.CPP  WPROFILE.CPP  _DIPTABL.CPP
WIN32LIB/TILE/: ICONSET.CPP  TILE.H
WIN32LIB/TIMER/: TIMER.CPP  TIMER.H  TIMERDWN.CPP  TIMERINI.CPP
WIN32LIB/VQA32/: AUDIOCOMPAT.CPP  AUDUNZAPCOMPAT.CPP  CONFIG.CPP  DRAWER.CPP  LOADER.CPP  TASK.CPP  UNVQ.H  UNVQCOMPAT.CPP  VQAPLAYP.H  VQCOMPAT.CPP
WIN32LIB/WINCOMM/: MODEMREG.CPP  MODEMREG.H  WINCOMM.CPP  WINCOMM.H
WIN32LIB/WSA/: WSA.CPP  WSA.H  XORDELTA.CPP
WIN32LIB/WW_WIN/: WINDOWS.CPP  WINHIDE.CPP  WW_WIN.H
WINVQ/INCLUDE/: VQFILE.H
WINVQ/VPLAY32/: PLYVQA32.CPP
WINVQ/VQA32/: AUDIO.CPP  CAPTION.CPP  DRAWER.CPP  LOADER.CPP  TASK.CPP  VQAFILE.H  VQAPLAY.BAK  VQAPLAY.H
WINVQ/VQAVIEW/: DIALOGS.RC  GAMETIME.CPP  MAIN.CPP  MAINWIND.CPP  MONOCHRM.CPP  MOVIES.CPP  PAL.CPP  VQ.CPP  WM.CPP
WINVQ/VQM32/: AUDZAP.CPP  FONT.CPP  HUFFCMP.CPP  IFF.CPP  MIXFILE.CPP  TARGA.CPP  VESABLIT.CPP  XMODEPG.CPP
WWFLAT32/AUDIO/: AUDIO.H  SOUNDINT.CPP  SOUNDINT.H  SOUNDIO.BAK  SOUNDIO.CPP  SOUNDLCK.CPP
WWFLAT32/DESCMGMT/: DESCMGMT.H
WWFLAT32/FILE/: FILE.BAK  FILE.CPP  FILE.H  FILEINIT.CPP  FILEIO.CPP  FILELIB.CPP  FINDFILE.BAK  FINDFILE.CPP
WWFLAT32/FONT/: FONT.CPP  LOADFONT.BAK  LOADFONT.CPP
WWFLAT32/IFF/: LOADPICT.BAK  LOADPICT.CPP
WWFLAT32/INCLUDE/: IFF.H  WWSTD.H
WWFLAT32/MCGAPRIM/: BUFFER.CPP
WWFLAT32/MEM/: MEM.CPP  WWMEM.H
WWFLAT32/MISC/: FINDARGV.CPP  LIB.CPP  WWLIB32.H  WWSTD.H
WWFLAT32/PALETTE/: PALETTE.CPP
WWFLAT32/PLAYCD/: GETCD.CPP.BAK
WWFLAT32/TILE/: ICONSET.BAK  ICONSET.CPP
WWFLAT32/WINDOWS/: WINDOWS.CPP.BAK
WWFLAT32/WSA/: WSA.CPP
android/cmake/: AndroidDataManifest.xml.cmake  AndroidManifest.xml.cmake  RedAlertActivity.java.cmake
docker/: filter_emscripten_gamedata.py
docker/nginx/: 10-configure-basic-auth.sh  redalert-web.conf
docs/: NETWORKING_STATUS.md  PORTING_KNOWLEDGE.md  PORTING_PROGRESS.md  WOL_INVENTORY.md  WOL_PROTOCOL.md
resources/windows/: redalert.rc
server/: build.zig  build.zig.zon
server/src/: http.zig  integration_test.zig  main.zig  proto.zig  ws.zig  (+2 more)
tests/: run_wol_transport_tests.sh  udpaddr_stub.cpp  ws_smoke.cpp  wsmgr_e2e.cpp  wsmgr_multi.cpp
web/: shell.html  site.webmanifest
(+97 files in other folders)
